New account field

--- a/package.xml
+++ b/package.xml
@@ -50,6 +50,7 @@
         <name>CustomApplication</name>
     </types>
     <types>
+        <members>Account.ART__c</members>
         <members>Account.AccountNumber</members>
         <members>Account.AccountSource</members>
         <members>Account.Active__c</members>
